change location name

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
         }
         else if(k_bread < d_bread && k_bread < m_bread){
           console.log("Location with minimum consumption of bread"+k_bread);
-          document.getElementById('bread').innerHTML = 'Delhi minimum consuption of Bread:'+k_bread
+          document.getElementById('bread').innerHTML = 'kolkata minimum consuption of Bread:'+k_bread
         }else{
           console.log("Location with minimum consumption of bread"+m_bread);
-          document.getElementById('bread').innerHTML = 'Delhi minimum consuption of Bread:'+m_bread
+          document.getElementById('bread').innerHTML = 'Mumbai minimum consuption of Bread:'+m_bread
         }
         
         document.querySelector("tbody").innerHTML += list;
